# Omega-Agent

./: .env.example  .gitignore  AGENTS.md  PROMPTS.md  README.md  install.ps1  pyproject.toml  uninstall.ps1
.tmp/: omega-config-cli-test.json  omega_cli.db  project-workspaces-ui.db
omega_agent/: cli.py  codex_backend.py  compat.py  config.py  config_store.py  doctor.py  main.py  powershell_profile.py  updater.py
omega_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
omega_control/: index.html  package-lock.json  package.json  tailwind.config.ts
scripts/: build-release.ps1  dev.sh  doctor-install.ps1  install-powershell-command.ps1  install-windows.ps1  uninstall-powershell-command.ps1  uninstall-windows.ps1
tests/: conftest.py  test_ag_ui_events.py  test_agent_profiles.py  test_agent_tool_actions.py  test_browser_automation.py  test_budget_governor.py  test_capability_control_plane.py  test_channels.py  test_cli.py  test_cli_bootstrap.py  test_code_workspace.py  test_codex_backend.py  test_config.py  test_config_store.py  test_connectors.py  test_desktop_automation.py  test_durable_runtime.py  test_evaluation_trace_loop.py  test_gateway.py  test_gateway_startup.py  test_identity.py  test_memory.py  test_mobile_tailscale.py  test_models.py  test_multi_agent.py  test_performance.py  test_platform_v01.py  test_plugins_security.py  test_policy_studio.py  test_powershell_profile.py  test_production_hardening.py  test_project_memory.py  test_projects.py  test_provider_cli.py  test_providers.py  test_reasoning.py  test_research.py  (+13 more)
(+1127 files in other folders)
