[project]
name = "omega-agent"
version = "0.1.0"
description = "Local-first personal AI agent with strict filesystem and shell permissions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai-agents>=0.4.0",
  "fastapi>=0.115.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.1",
  "typer>=0.12.3",
  "uvicorn>=0.30.0"
]

[project.optional-dependencies]
browser = [
  "playwright>=1.49.0"
]
desktop = [
  "pyautogui>=0.9.54"
]

[project.scripts]
omega = "omega_agent.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.package-data]
omega_agent = ["gateway/static/*"]

[tool.setuptools.packages.find]
include = ["omega_agent*"]
exclude = ["omega_control*", "tests*"]
